# openenv-email-triage

./: .dockerignore  Dockerfile  README.md  __init__.py  baseline_results.json  inference.py  models.py  openenv.yaml  pyproject.toml  validate_output.txt
.github/workflows/: openenv.yml
baseline/: run_baseline.py
openenv_email_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  email_environment.py  graders.py  requirements.txt  tasks.py
server/data/: emails.json
tests/: test_environment.py
